<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/home_bg"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:contentDescription="@string/home_background"
            android:scaleType="centerCrop"
            android:src="@drawable/back"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#90000000"
            app:layout_constraintBottom_toBottomOf="@id/home_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewSupporter"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="@id/home_bg"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardDiet"
            style="@style/cardView"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewSupporter">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/diet_chart"
                    android:src="@drawable/diet" />

                <TextView
                    style="@style/cardTextView"
                    android:text="@string/diet_chart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardExercise"
            style="@style/cardView"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewSupporter">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/exercise_chart"
                    android:src="@drawable/icexercise" />

                <TextView
                    style="@style/cardTextView"
                    android:text="@string/exercise_chart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardYoga"
            style="@style/cardView"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardDiet">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/yoga_chart"
                    android:src="@drawable/icyoga" />

                <TextView
                    style="@style/cardTextView"
                    android:text="@string/yoga_chart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardMed"
            style="@style/cardView"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardExercise">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/meditation_chart"
                    android:src="@drawable/icmeditation" />

                <TextView
                    style="@style/cardTextView"
                    android:text="@string/meditation_chart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/home_bg" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>